# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db.py  db_func.py  parsing.py  url.py  url_func.py
page_analyzer/templates/: all_urls.html  base.html  error.html  index.html  show.html
